# testkey-signer

./: .gitignore  Cargo.toml  LICENSE  README.md  build-android.sh  build-module.sh
module/: module.prop
module/webroot/: index.css  index.html  index.js  kernelsu.js
src/: avb.rs  bindings.rs  hasher.rs  io_delegate.rs  main.rs  testkey.rs
tests/: avbtool.py  non-testkey.pem
