[package]
name = "testkey-signer"
version = "0.1.0"
edition = "2024"

[dependencies]
aws-lc-rs = "1.16.1"
env_logger = "0.11.9"
log = "0.4.29"
num-bigint-dig = "=0.8.6"
num-traits = "*"
rsa = { version = "0.9.10", features = ["hazmat", "sha1", "sha2"] }
zerocopy = { version = "0.8.27", features = ["derive", "std"] }
