[package]
name = "testkey-signer"
version = "0.1.0"
edition = "2024"

[dependencies]
env_filter = { version = "1.0.0", default-features = false }
env_logger = { version = "0.11.9", default-features = false }
log = "0.4.29"
num-bigint-dig = { version = "0.8", default-features = false }
num-traits = "*"
rsa = { version = "0.9.10", features = ["hazmat", "pem", "sha1", "sha2", "std"], default-features = false }
sha2 = "0.10.9"

[profile.release]
strip = true
